[package]
name = "orgb"
description = "An OpenRGB CLI utility for managing RGB after sleep and wake-up on Windows"
version = "0.1.1"
authors = ["Samuel Corsi-House <chouse.samuel@gmail.com>"]
edition = "2021"

[dependencies]
clap = { version = "4.1.1", features = ["derive", "cargo"] }
directories = "4.0.1"
openrgb = "0.1.2"
tokio = { version = "1.24.2", features = ["full"] }
