[package]
name = "orgb"
description = "An OpenRGB CLI utility for managing RGB after sleep and wake-up on Windows"
version = "0.1.1"
authors = ["Samuel Corsi-House <chouse.samuel@gmail.com>"]
edition = "2021"

[dependencies]
openrgb = "0.1.2"
tokio = { version = "1.24.2", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
windows = { version = "0.44.0", features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_System_Power",
	"Win32_System_SystemServices"
] }
