[package]
name = "orgb"
description = "An OpenRGB CLI utility for managing RGB after sleep and wake-up on Windows"
version = "0.1.2"
authors = ["Samuel Corsi-House <chouse.samuel@gmail.com>"]
edition = "2021"

[dependencies]
directories = "5.0.0"
openrgb = "0.1.2"
tokio = { version = "1.27.0", features = ["full"] }
tracing = { git = "https://github.com/tokio-rs/tracing" }
tracing-appender = { git = "https://github.com/tokio-rs/tracing" }
tracing-subscriber = { features = [
	"env-filter"
], git = "https://github.com/tokio-rs/tracing" }
windows = { version = "0.48.0", features = [
	"Win32_UI_WindowsAndMessaging",
	"Win32_Foundation",
	"Win32_System_Power",
	"Win32_System_SystemServices"
] }
